Refactor sprite image drawing - simplify and generalize getSpriteImage() method